Add PARKING_PASS transaction type
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/_table.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/_table.html.twig
@@ -19,6 +19,8 @@
                 Renewal Fee
             {% elseif entity.trantype == 'LUNCHEON_FEE' %}
                 Luncheon Fee
+            {% elseif entity.trantype == 'PARKING_PASS' %}
+                Parking Pass
             {% else %}
                 {{ entity.trantype }}
             {% endif %}
