Fix missing errors for emailCanonical in registration form
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/_form_full.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/_form_full.html.twig
@@ -49,6 +49,7 @@
                         </span>
                         {{ form_widget(member.emailCanonical) }}
                     </div>
+                    {{ form_errors(member.emailCanonical) }}
                 </div>
                 {% endif %}
                 {% if member.activenow is defined %}
