--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
@@ -5,21 +5,31 @@
 {% block body %}
     {% block fos_user_content %}
     <ul class="nav nav-tabs">
-        <li class="active"><a href="#overview" data-toggle="tab">Overview</a></li>
-        <li><a href="#household" data-toggle="tab">Household Details</a></li>
-        <li><a href="#renewals" data-toggle="tab">Membership Renewal</a></li>
-        <li><a href="#luncheons" data-toggle="tab">Luncheon Registration</a></li>
-        <li><a href="#details" data-toggle="tab">Account Details</a></li>
+        <li {% if tab == "overview" %}class="active"{% endif %}>
+          <a href="?tab=overview" data-toggle="tab" data-target="#overview">Overview</a>
+        </li>
+        <li {% if tab == "household" %}class="active"{% endif %}>
+          <a href="?tab=household" data-toggle="tab" data-target="#household">Household Details</a>
+        </li>
+        <li {% if tab == "renewals" %}class="active"{% endif %}>
+          <a href="?tab=renewals" data-toggle="tab" data-target="#renewals">Membership Renewal</a>
+        </li>
+        <li {% if tab == "luncheons" %}class="active"{% endif %}>
+          <a href="?tab=luncheons" data-toggle="tab" data-target="#luncheons">Luncheon Registration</a>
+        </li>
+        <li {% if tab == "details" %}class="active"{% endif %}>
+          <a href="?tab=details" data-toggle="tab" data-target="#details">Change Password</a>
+        </li>
     </ul>
     <div class="tab-content">
-        <div class="tab-pane fade in active" id="overview">
+        <div class="tab-pane fade {% if tab == "overview" %}in active{% endif %}" id="overview">
             {% include 'UMRAMemberBundle:Person:detail.html.twig' with { 'entity': user } %}
         </div>
-        <div class="tab-pane fade" id="household">
+        <div class="tab-pane fade {% if tab == "household" %}in active{% endif %}" id="household">
             <br />
             {% include 'UMRAMemberBundle:Household:detail.html.twig' with { 'entity': user.household } %}
         </div>
-        <div class="tab-pane fade" id="renewals">
+        <div class="tab-pane fade {% if tab == "renewals" %}in active{% endif %}" id="renewals">
             <br />
             <div class="col-sm-5">
                 {% include 'UMRAMemberBundle:Registration:renew_panel.html.twig' with {
@@ -41,7 +51,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="luncheons">
+        <div class="tab-pane fade {% if tab == "luncheons" %}in active{% endif %}" id="luncheons">
             <br />
             <div class="col-sm-4">
                 {% include 'UMRAMemberBundle:Luncheon:_register_form.html.twig' with { 'form': luncheonForm } %}
@@ -60,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade" id="details">
+        <div class="tab-pane fade {% if tab == "details" %}in active{% endif %}" id="details">
             <br />
             <div class="col-sm-6 col-md-4">
                 <div class="panel panel-warning">
