Support removal of residences in the full household edit view
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/_form_full.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/_form_full.html.twig
@@ -7,6 +7,11 @@
         <div class="list-group-item">
             <h4>
                 <span class="label label-success">Residence {{ loop.index }}</span>
+                {% if allow_delete is defined and allow_delete %}
+                <button class="btn-residence-del close pull-right" type="button" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                {% endif %}
             </h4>
 
             {{ form_errors(residence) }}
