--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/index.html.twig
@@ -119,6 +119,14 @@
         </table>
     </div>
 
+    <div class="btn-toolbar">
+        <div class="btn-group pull-right">
+            <a class="btn btn-default" href="{{ path('UMRA_Trans', { _format: 'csv' }) }}?{{ app.request.queryString }}">
+                <span class="fa fa-save"></span> Export as CSV
+            </a>
+        </div>
+    </div>
+
     <div class="navigation">
         {{ knp_pagination_render(entities) }}
     </div>
