Make register template more flexible to support different parent form types
Signed-off-by: Max Fierke <fierk007@umn.edu>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
@@ -13,6 +13,7 @@
 		{{ form_start(form, { action: path('UMRA_register') }) }}
 			{{ form_errors(form) }}
 
+			{% if form.household %}
 			{{ form_widget(form.household.firstname, { type: 'hidden', attr: {
 				'ng-value': 'household.members[0].firstname'}
 				})
@@ -21,17 +22,24 @@
 				'ng-value': 'household.members[0].lastname'}
 				})
 			}}
+			{% endif %}
+
+			{% if form.members %}
 			{% include 'UMRAMemberBundle:Person:_form_full.html.twig' with {
 				'members': form.members,
 				'allow_add': true,
 				'allow_delete': true
 			} %}
+			{% endif %}
+
+			{% if form.residences %}
 			{{ form_row(form.household.postalname, { attr: { 'ng-model': 'household.postalname' }}) }}
 			{% include 'UMRAMemberBundle:Residence:_form_full.html.twig' with {
 				'residences': form.residences,
 				'allow_add': true,
 				'allow_delete': true
 			} %}
+			{% endif %}
 
 			<div class="panel panel-default">
 				<div class="panel-body">
@@ -152,8 +160,13 @@
 {% endblock %}
 
 {% block javascripts %}
-{% include 'UMRAMemberBundle:Person:_form_prototype.html.twig' with { 'persons': form.members } %}
-{% include 'UMRAMemberBundle:Residence:_form_prototype.html.twig' with { 'residences': form.residences } %}
-<script type="text/javascript" src="{{ asset('js/umramember.jquery.personcollection.js') }}"></script>
-<script type="text/javascript" src="{{ asset('js/umramember.jquery.residencecollection.js') }}"></script>
+	{% if form.members %}
+		{% include 'UMRAMemberBundle:Person:_form_prototype.html.twig' with { 'persons': form.members } %}
+		<script type="text/javascript" src="{{ asset('js/umramember.jquery.personcollection.js') }}"></script>
+	{% endif %}
+
+	{% if form.residences %}
+		{% include 'UMRAMemberBundle:Residence:_form_prototype.html.twig' with { 'residences': form.residences } %}
+		<script type="text/javascript" src="{{ asset('js/umramember.jquery.residencecollection.js') }}"></script>
+	{% endif %}
 {% endblock %}
