--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/renew_panel.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/renew_panel.html.twig
@@ -29,17 +29,17 @@
 				{% do form.luncheonPreorder.setRendered %}
 				<div class="radio-inline">
 					<label>
-						<input type="radio" name="renewal[luncheonPreorder]" value="112" /> Single ($112)
+						<input type="radio" name="renewal[luncheonPreorder]" value="single" /> Single ($112)
 					</label>
 				</div>
 				<div class="radio-inline">
 					<label>
-						<input type="radio" name="renewal[luncheonPreorder]" value="224" /> Couple ($224)
+						<input type="radio" name="renewal[luncheonPreorder]" value="couple" /> Couple ($224)
 					</label>
 				</div>
 				<div class="radio-inline">
 					<label>
-						<input type="radio" name="renewal[luncheonPreorder]" value="0" /> Do not pre-purchase
+						<input type="radio" name="renewal[luncheonPreorder]" value="none" /> Do not pre-purchase
 					</label>
 				</div>
 			</div>
