--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,63 +1,41 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
-<div class="row">
-    <div class="col-sm-6">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <h4>Existing UMRA Members</h4>
-                {% if error %}
-                    <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
-                {% endif %}
 
-                <form action="{{ path("fos_user_security_check") }}" method="post">
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+<div class="panel panel-default">
+    <div class="panel-body">
+        <h4>Please Login</h4>
+        {% if error %}
+            <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
+        {% endif %}
 
-                    <div class="form-group">
-                        <label class="control-label" for="username">Login Email Address</label>
-                        <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="form-control" />
-                    </div>
+        <form action="{{ path("fos_user_security_check") }}" method="post">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-                    <div class="form-group">
-                        <label class="control-label" for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-                        <input type="password" id="password" name="_password" required="required" class="form-control" />
-                    </div>
-
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <label for="remember_me">
-                                <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                                {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
-                            </label>
-                        </div>
-                    </div>
-
-                    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-primary" />
-                    <a href="{{ path('fos_user_resetting_request') }}" class="btn btn-default">
-                        Forgot password?
-                    </a>
-                </form>
+            <div class="form-group">
+                <label class="control-label" for="username">Login Email Address</label>
+                <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="form-control" />
             </div>
-        </div>
-    </div>
-    <div class="col-sm-6 text-center">
-        <h4>Not Yet Registered?</h4>
-        <a href="{{ path('UMRA_register') }}" class="btn btn-lg btn-primary">
-            Register
-        </a>
 
-        <hr />
+            <div class="form-group">
+                <label class="control-label" for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
+                <input type="password" id="password" name="_password" required="required" class="form-control" />
+            </div>
 
-        <strong>Note to Members Who Registered before [Date of Launch]:</strong>
-        <p>
-            If you were a member prior to [Date of Launch] and you had an email on file with
-            UMRA, you have an account already! Simply
-            <a href="{{ path('fos_user_resetting_request') }}">
-                click here
+            <div class="form-group">
+                <div class="checkbox">
+                    <label for="remember_me">
+                        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                        {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
+                    </label>
+                </div>
+            </div>
+
+            <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-primary" />
+            <a href="{{ path('fos_user_resetting_request') }}" class="btn btn-default">
+                Forgot password?
             </a>
-            to have a password reset sent to you. You will have received an email from UMRA
-            with a link to click to set a password to login.
-        </p>
+        </form>
     </div>
 </div>
 {% endblock fos_user_content %}
