--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -3,22 +3,16 @@
 {% block modulecontent -%}
     <div class="page-header">
         <h2>Household of {{ entity.firstname }} {{ entity.lastname }}</h2>
-        <h4 class="text-muted">Postal Name: <small>{{ entity.postalname }}</small>
+        <h4 class="text-muted">Postal Name: <small>{{ entity.postalname }}</small></h4>
     </div>
 
     {% include 'UMRAMemberBundle:Household:detail.html.twig' %}
 
     <ul class="list-inline">
         <li>
-            {% if is_granted('ROLE_ADMIN') and entity.id != app.user.household.id %}
             <a class="btn btn-default" href="{{ path('UMRA_Household') }}">
                 Back to Member List
             </a>
-            {% else %}
-            <a class="btn btn-default" href="{{ path('UMRA_Person_Profile') }}">
-                Back to my profile
-            </a>
-            {% endif %}
         </li>
         <li>
             <a class="btn btn-primary" href="{{ path('UMRA_Household_edit', { 'id': entity.id }) }}">
