--- a/app/Resources/views/form_div_layout.html.twig
+++ b/app/Resources/views/form_div_layout.html.twig
@@ -13,7 +13,7 @@
 {% block form_widget_simple %}
 {% spaceless %}
     {% set type = type|default('text') %}
-    <input class="form-control" type="{{ type }}" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" {% endif %}/>
+    <input class="form-control input-sm" type="{{ type }}" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" {% endif %}/>
 {% endspaceless %}
 {% endblock form_widget_simple %}
 
@@ -40,7 +40,8 @@
 
 {% block textarea_widget %}
 {% spaceless %}
-    <textarea class="form-control" {{ block('widget_attributes') }}>{{ value }}</textarea>
+    <textarea class="form-control input-sm" {{ block('widget_attributes') }}>{{
+        value }}</textarea>
 {% endspaceless %}
 {% endblock textarea_widget %}
 
@@ -69,7 +70,8 @@
     {% if required and empty_value is none and not empty_value_in_choices %}
         {% set required = false %}
     {% endif %}
-    <select class="form-control" {{ block('widget_attributes') }}{% if multiple %} multiple="multiple"{% endif %}>
+    <select class="form-control input-sm" {{ block('widget_attributes') }}{% if
+    multiple %} multiple="multiple"{% endif %}>
         {% if empty_value is not none %}
             <option value=""{% if required and value is empty %} selected="selected"{% endif %}>{{ empty_value|trans({}, translation_domain) }}</option>
         {% endif %}
