Turn Luncheon#show view into the luncheon roster view
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Luncheon/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Luncheon/index.html.twig
@@ -31,7 +31,7 @@
                 <td>
                     <div class="btn-group">
                         <a href="{{ path('UMRA_Luncheon_show', { 'id': entity.id }) }}" class="btn btn-default">
-                            <span class="fa fa-eye"></span> Show
+                            <span class="fa fa-list"></span> Roster
                         </a>
                         <a href="{{ path('UMRA_Luncheon_edit', { 'id': entity.id }) }}" class="btn btn-primary">
                             <span class="fa fa-pencil"></span> Edit
